# q-cli-mcp-server

./: README.md  add_to_q.sh  pyproject.toml  requirements.txt
q_cli_mcp/: __init__.py  server.py
